--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,16 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a0b25a3f",
+   "id": "0536f39d",
    "metadata": {},
    "source": [
-    "# Agenda: Day 5"
+    "# Agenda: Day 5 (Modules and packages)\n",
+    "\n",
+    "1. Review of last week's challenge\n",
+    "2. Q&A\n",
+    "3. Modules\n",
+    "    - Why do need modules?\n",
+    "    - Using `import` to load modules\n",
+    "    - Different variations on `import`\n",
+    "    - Writing a simple module\n",
+    "    - How do modules work?\n",
+    "4. Python's standard library\n",
+    "5. Modules vs. packages\n",
+    "6. PyPI\n",
+    "    - What is it?\n",
+    "    - How can we install things from PyPI?\n",
+    "    - Issues with installation\n",
+    "    - Understanding how to navigate through and use PyPI\n",
+    "7. Next steps -- where do we go from here?    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d0cbcc0",
+   "id": "ec986ac0",
    "metadata": {},
    "outputs": [],
    "source": []
