--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0536f39d",
+   "id": "639b5647",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -27,8 +27,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "69e1e926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code from the inteactive exercise\n",
+    "\n",
+    "def count_ips(filename):\n",
+    "    output = {}   # new, empty dict\n",
+    "\n",
+    "    for one_line in open(filename):           # go through the file, one line at a time, assigning to one_line\n",
+    "        ip_address = one_line.split()[0]      # grab the IP address from the start of each line\n",
+    "\n",
+    "        if ip_address in output:              # if we've already seen ip_address, then add 1 to its count\n",
+    "            output[ip_address] += 1           # (ip_address is a key in the \"output\" dict)\n",
+    "\n",
+    "        else:                                 # if this is the first time we see ip_address, set it to be a key\n",
+    "            output[ip_address] = 1            # in output, and the value is 1\n",
+    "\n",
+    "    # - each new IP address adds a new key-value pair to output\n",
+    "    # - each repeat IP address adds 1 to the value of the existing key\n",
+    "\n",
+    "    return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "33217a68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'67.218.116.165': 2,\n",
+       " '66.249.71.65': 3,\n",
+       " '65.55.106.183': 2,\n",
+       " '66.249.65.12': 32,\n",
+       " '65.55.106.131': 2,\n",
+       " '65.55.106.186': 2,\n",
+       " '74.52.245.146': 2,\n",
+       " '66.249.65.43': 3,\n",
+       " '65.55.207.25': 2,\n",
+       " '65.55.207.94': 2,\n",
+       " '65.55.207.71': 1,\n",
+       " '98.242.170.241': 1,\n",
+       " '66.249.65.38': 100,\n",
+       " '65.55.207.126': 2,\n",
+       " '82.34.9.20': 2,\n",
+       " '65.55.106.155': 2,\n",
+       " '65.55.207.77': 2,\n",
+       " '208.80.193.28': 1,\n",
+       " '89.248.172.58': 22,\n",
+       " '67.195.112.35': 16,\n",
+       " '65.55.207.50': 3,\n",
+       " '65.55.215.75': 2}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_ips('mini-access-log.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ec986ac0",
+   "id": "08df5e54",
    "metadata": {},
    "outputs": [],
    "source": []
