--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "639b5647",
+   "id": "52808525",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69e1e926",
+   "id": "d5568cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +49,13 @@
     "    # - each new IP address adds a new key-value pair to output\n",
     "    # - each repeat IP address adds 1 to the value of the existing key\n",
     "\n",
-    "    return output\n"
+    "    return output  # this is a dict\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33217a68",
+   "id": "ca9b1ab3",
    "metadata": {},
    "outputs": [
     {
@@ -95,12 +95,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08df5e54",
+   "cell_type": "markdown",
+   "id": "6074a663",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Modules\n",
+    "\n",
+    "One of the main things to keep in mind when programming is the DRY (\"don't repeat yourself\") rule:\n",
+    "\n",
+    "- If you "
+   ]
   }
  ],
  "metadata": {
